--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<li><a href="#" data-nav-section="services"><span>Services</span></a></li>
 						<li><a href="#" data-nav-section="explore"><span>Project</span></a></li>
 						<li><a href="#" data-nav-section="pricing"><span>Pricing</span></a></li>
-						<li><a href="#" data-nav-section="team"><span>Team</span></a></li>
+						<li><a href="#" data-nav-section="team"><span>dAPP</span></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -101,7 +101,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Black Features</h2>
+						<h2 class="to-animate">Key Features</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
 								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
@@ -120,22 +120,22 @@
 										<div class="core">
 											<i class="icon-cloud-download to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>Free Download</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>Free Resources</h3>
+												<p>Find a range of free downloadable resources to support your mindfulness journey. From guided meditations to wellness articles, we have it all.</p>
 											</div>
 										</div>
 										<div class="core">
 											<i class="icon-laptop to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>Responsive Layout</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>24/7 Help & Support</h3>
+												<p>Need assistance or have questions? Our support team is available around the clock to provide help and guidance.</p>
 											</div>
 										</div>
 										<div class="core">
 											<i class="icon-gear to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>24/7 Help &amp; Support</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>Mindfulness Tools</h3>
+												<p>Access a variety of tools and resources designed to enhance your mindfulness practice.</p>
 											</div>
 										</div>
 										<div class="core">
@@ -156,19 +156,19 @@
 						<div class="row to-animate">
 							<div class="col-md-3 text-center">
 								<span class="fh5co-counter js-counter" data-from="0" data-to="3452" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Cups of Coffee</span>
+								<span class="fh5co-counter-label">Cups of Tea Shared</span>
 							</div>
 							<div class="col-md-3 text-center">
 								<span class="fh5co-counter js-counter" data-from="0" data-to="234" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Client</span>
+								<span class="fh5co-counter-label">Active Members</span>
 							</div>
 							<div class="col-md-3 text-center">
 								<span class="fh5co-counter js-counter" data-from="0" data-to="6542" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Projects</span>
+								<span class="fh5co-counter-label">Community Projects</span>
 							</div>
 							<div class="col-md-3 text-center">
 								<span class="fh5co-counter js-counter" data-from="0" data-to="8687" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Finished Projects</span>
+								<span class="fh5co-counter-label">Mindful Moments</span>
 							</div>
 						</div>
 					</div>
