--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
 			<div class="row">
 				<div class="col-md-4 to-animate">
 					<h3 class="section-title">About Us</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-					<p class="copy-right">&copy; 2015 Twist Free Template. <br>All Rights Reserved. <br>
+					<p>At Mind3z, we believe in the transformative power of mindfulness. Far away from the daily hustle, we provide a sanctuary where you can find peace and clarity. Join our community and embark on a journey of self-discovery and tranquility.</p>
+					<p class="copy-right">&copy; 2025 Twist Free Template. <br>All Rights Reserved. <br>
 						Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a>
 						Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a>
 					</p>
