--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 						<h2 class="to-animate">Plans Built For Every One</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate">Whether you're just starting out or looking for advanced support, we've got a plan that fits your needs.</h3>
 							</div>
 						</div>
 					</div>
