--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 		<div class="getting-grid" style="background-image:  url(images/full_image_1.jpg);">
 			<div class="desc text-center">
 				<h2>Getting Started</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+				<p>Ready to take the first step towards mindfulness? Get in touch with us today and start your journey.</p>
 				<p><a href="#" class="btn btn-primary">Get in touch</a></p>
 			</div>
 		</div>
