--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<h2 class="to-animate">Key Features</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate"> </h3>
 							</div>
 						</div>
 					</div>
@@ -184,7 +184,7 @@
 					<h2 class="to-animate">Our Services</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3> </h3>
 						</div>
 					</div>
 				</div>
@@ -327,7 +327,7 @@
 
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-md-push-3 to-animate">
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
+						<p></p>
 						<p>Our Dapp provides a unique and secure platform for our community members. By leveraging blockchain technology, we ensure transparency and security in all our interactions. The main function of our Dapp is to allow clients to vote for wellness professionals, life coaches, and therapists. This voting system empowers our members to have a say in the selection of the professionals who serve our community, ensuring high-quality services and support.</p>
 					</div>
 				</div>
