--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Our Staff</h2>
+						<h2 class="to-animate">Our Dapp</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate">Our Dapp provides a unique and secure platform for our community members. By leveraging blockchain technology, we ensure transparency and security in all our interactions. The main function of our Dapp is to allow clients to vote for wellness professionals, life coaches, and therapists. This voting system empowers our members to have a say in the selection of the professionals who serve our community, ensuring high-quality services and support. </h3>
 							</div>
 						</div>
 					</div>
