--- a/index.html
+++ b/index.html
@@ -424,12 +424,12 @@
 				</div>
 
 				<div class="col-md-4 to-animate">
-					<h3 class="section-title">Our Address</h3>
+					<h3 class="section-title"></h3>
 					<ul class="contact-info">
-						<li><i class="icon-map-marker"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone"></i>+ 1235 2355 98</li>
-						<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="icon-map-marker"></i></li>
+						<li><i class="icon-phone"></i></li>
+						<li><i class="icon-envelope"></i><a href="#"></a></li>
+						<li><i class="icon-globe2"></i><a href="#"></a></li>
 					</ul>
 					<h3 class="section-title">Connect with Us</h3>
 					<ul class="social-media">
