--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
 						<div class="price-box to-animate">
 							<h2 class="pricing-plan">Starter</h2>
 							<div class="price"><sup class="currency">$</sup>7<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
+							<p></p>
 							<hr>
 							<ul class="pricing-info">
-								<li>10 projects</li>
-								<li>20 Pages</li>
-								<li>20 Emails</li>
-								<li>100 Images</li>
+								<li>Basic Support</li>
+								<li>10 mindfulness sessions</li>
+								<li>20 guided meditations</li>
+								<li>20 email updates</li>
 							</ul>
 							<p><a href="#" class="btn btn-primary">Read More</a></p>
 						</div>
@@ -279,13 +279,13 @@
 						<div class="price-box to-animate">
 							<h2 class="pricing-plan">Regular</h2>
 							<div class="price"><sup class="currency">$</sup>19<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
+							<p></p>
 							<hr>
 							<ul class="pricing-info">
-								<li>15 projects</li>
-								<li>40 Pages</li>
-								<li>40 Emails</li>
-								<li>200 Images</li>
+								<li>Enhanced Support for groups</li>
+								<li>15 mindfulness sessions</li>
+								<li>40 guided meditations</li>
+								<li>200 email updates</li>
 							</ul>
 							<p><a href="#" class="btn btn-primary">Read More</a></p>
 						</div>
@@ -296,13 +296,13 @@
 							<div class="popular-text">Best value</div>
 							<h2 class="pricing-plan">Plus</h2>
 							<div class="price"><sup class="currency">$</sup>79<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
+							<p></p>
 							<hr>
 							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>100 Pages</li>
-								<li>100 Emails</li>
-								<li>700 Images</li>
+								<li>Comprehensive support for large groups</li>
+								<li>Unlimited mindfulness Sessions</li>
+								<li>100 guided meditations </li>
+								<li>500 email updates</li>
 							</ul>
 							<p><a href="#" class="btn btn-primary">Read More</a></p>
 						</div>
@@ -311,13 +311,13 @@
 						<div class="price-box to-animate">
 							<h2 class="pricing-plan">Enterprise</h2>
 							<div class="price"><sup class="currency">$</sup>125<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
+							<p></p>
 							<hr>
 							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>Unlimitted Pages</li>
-								<li>Unlimitted Emails</li>
-								<li>Unlimitted Images</li>
+								<li>Premium Support for large organizations</li>
+								<li>Unlimitted mindfulness sessions</li>
+								<li>Unlimitted meditations</li>
+								<li>Unlimitted emails</li>
 							</ul>
 							<p><a href="#" class="btn btn-primary">Read More</a></p>
 						</div>
