--- a/index.html
+++ b/index.html
@@ -412,74 +412,71 @@
 	</div>
 
 	<div id="fh5co-footer" role="contentinfo">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 to-animate">
-					<h3 class="section-title">About Us</h3>
-					<p>At Mind3z, we believe in the transformative power of mindfulness. Far away from the daily hustle, we provide a sanctuary where you can find peace and clarity. Join our community and embark on a journey of self-discovery and tranquility.</p>
-					<p class="copy-right">&copy; 2025 Twist Free Template. <br>All Rights Reserved. <br>
-						Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a>
-						Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a>
-					</p>
-				</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 to-animate">
+                <h3 class="section-title">About Us</h3>
+                <p>At Mind3z, we believe in the transformative power of mindfulness. Far away from the daily hustle, we provide a sanctuary where you can find peace and clarity. Join our community and embark on a journey to well-being.</p>
+                <p class="copy-right">&copy; 2025 Twist Free Template. <br>All Rights Reserved. <br>
+                    Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a>
+                    Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a>
+                </p>
+            </div>
 
-				<div class="col-md-4 to-animate">
-					<h3 class="section-title"></h3>
-					<ul class="contact-info">
-						<li><i class="icon-map-marker"></i></li>
-						<li><i class="icon-phone"></i></li>
-						<li><i class="icon-envelope"></i><a href="#"></a></li>
-						<li><i class="icon-globe2"></i><a href="#"></a></li>
-					</ul>
-					<h3 class="section-title">Connect with Us</h3>
-					<ul class="social-media">
-						<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-						<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-						<li><a href="#" class="dribbble"><i class="icon-dribbble"></i></a></li>
-						<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
-					</ul>
-				</div>
-				<div class="col-md-4 to-animate">
-					<h3 class="section-title">Drop us a line</h3>
-					<form class="contact-form">
-						<div class="form-group">
-							<label for="name" class="sr-only">Name</label>
-							<input type="name" class="form-control" id="name" placeholder="Name">
-						</div>
-						<div class="form-group">
-							<label for="email" class="sr-only">Email</label>
-							<input type="email" class="form-control" id="email" placeholder="Email">
-						</div>
-						<div class="form-group">
-							<label for="message" class="sr-only">Message</label>
-							<textarea class="form-control" id="message" rows="7" placeholder="Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" id="btn-submit" class="btn btn-send-message btn-md" value="Send Message">
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- <div id="map" class="fh5co-map"></div> -->
+            <div class="col-md-4 to-animate">
+                <h3 class="section-title">Contact Info</h3>
+                <ul class="contact-info">
+                    <li><i class="icon-map-marker"></i>123 Street, City, Country</li>
+                    <li><i class="icon-phone"></i>+1 234 567 890</li>
+                    <li><i class="icon-envelope"></i><a href="mailto:info@freehtml5.co">info@freehtml5.co</a></li>
+                    <li><i class="icon-globe2"></i><a href="http://freehtml5.co">www.freehtml5.co</a></li>
+                </ul>
+                <h3 class="section-title">Connect with Us</h3>
+                <ul class="social-media">
+                    <li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
+                    <li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
+                    <li><a href="#" class="dribbble"><i class="icon-dribbble"></i></a></li>
+                    <li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 to-animate">
+                <h3 class="section-title">Drop us a line</h3>
+                <form class="contact-form">
+                    <div class="form-group">
+                        <label for="name" class="sr-only">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="sr-only">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message" class="sr-only">Message</label>
+                        <textarea class="form-control" id="message" rows="7" placeholder="Message"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" id="btn-submit" class="btn btn-send-message btn-md" value="Send Message">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Counters -->
-	<script src="js/jquery.countTo.js"></script>
-	<!-- Main JS (Do not remove) -->
-	<script src="js/main.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Stellar Parallax -->
+<script src="js/jquery.stellar.min.js"></script>
+<!-- Counters -->
+<script src="js/jquery.countTo.js"></script>
+<!-- Main JS (Do not remove) -->
+<script src="js/main.js"></script>
 
-	</body>
+</body>
 </html>
-
