--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@
 <div class="getting-started getting-started-1">
     <div class="getting-grid" style="background-image: url(images/full_image_1.jpg);">
         <div class="desc text-center">
-            <h2>Getting Started</h2>
-            <p>Ready to take the first step towards mindfulness? Get in touch with us today and start your journey.</p>
-            <p><a href="#" class="btn btn-primary">Get in touch</a></p>
+            <h2>Our Dapp</h2>
+            <p>Our Dapp provides a unique and secure platform for our community members. By leveraging blockchain technology, we ensure transparency and security in all our interactions. The main function of our Dapp is to allow clients to vote for wellness professionals, life coaches, and therapists. This voting system empowers our members to have a say in the selection of the professionals who serve our community, ensuring high-quality services and support.</p>
+            <p><a href="#" class="btn btn-primary">Dapp</a></p>
         </div>
     </div>
 </div>
