--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
 					
-					<h2 class="to-animate">Our Services</h2>
+					<h2 class="to-animate"></h2>
 <div class="getting-started getting-started-1">
     <div class="getting-grid" style="background-image: url(images/full_image_1.jpg);">
         <div class="desc text-center">
