--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 											</div>
 										</div>
 										<div class="core">
-											<i class="icon-columns to-animate-2"></i>
-											<div class="fh5co-post to-animate">
+											<i></i>
+											<div>
 												<h3></h3>
 												<p></p>
 											</div>
