--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
 							<hr>
 							<ul class="pricing-info">
 								<li>Premium Support for large organizations</li>
-								<li>Unlimitted mindfulness sessions</li>
-								<li>Unlimitted meditations</li>
-								<li>Unlimitted emails</li>
+								<li>Unlimited mindfulness sessions</li>
+								<li>Unlimited meditations</li>
+								<li>Unlimited emails</li>
 							</ul>
 							<p><a href="#" class="btn btn-primary">Read More</a></p>
 						</div>
