--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
                 <ul class="contact-info">
                     <li><i class="icon-map-marker"></i>123 Street, City, Country</li>
                     <li><i class="icon-phone"></i>+1 234 567 890</li>
-                    <li><i class="icon-envelope"></i><a href="mailto:info@freehtml5.co">info@freehtml5.co</a></li>
-                    <li><i class="icon-globe2"></i><a href="http://freehtml5.co">www.freehtml5.co</a></li>
+                    <li><i class="icon-envelope"></i><a href="mailto:info@example.co">info@example.co</a></li>
+                    <li><i class="icon-globe2"></i><a href="http://example.co">www.example.co</a></li>
                 </ul>
                 <h3 class="section-title">Connect with Us</h3>
                 <ul class="social-media">
