--- a/service.html
+++ b/service.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services</title>
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="css/icomoon.css">
+    <!-- Simple Line Icons -->
+    <link rel="stylesheet" href="css/simple-line-icons.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,7 +41,7 @@
 
     <div class="service">
         <h2>Life Coaching</h2>
-        <p>Our life coaching services are designed to help you achieve your personal and professional goals. Through one-on-one sessions, we work with you to identify your strengths, overcome obstacles, and create a plan for success.</p>
+        <p>Our life coaching services are designed to help you achieve your personal and professional goals. Through one-on-one sessions, we work with you to identify your strengths, overcome obstacle[...]
         <button onclick="toggleInfo('life-coaching')">More Information</button>
         <div id="life-coaching" class="more-info">
             <p>Additional information about Life Coaching...</p>
@@ -39,7 +50,7 @@
 
     <div class="service">
         <h2>Holistic Health</h2>
-        <p>Holistic health focuses on the well-being of the whole person—mind, body, and spirit. Our holistic health services include nutritional counseling, stress management techniques, and alternative therapies.</p>
+        <p>Holistic health focuses on the well-being of the whole person—mind, body, and spirit. Our holistic health services include nutritional counseling, stress management techniques, and altern[...]
         <button onclick="toggleInfo('holistic-health')">More Information</button>
         <div id="holistic-health" class="more-info">
             <p>Additional information about Holistic Health...</p>
@@ -48,7 +59,7 @@
 
     <div class="service">
         <h2>Lucid Dream Coaching</h2>
-        <p>Lucid dreaming is the art of becoming aware that you are dreaming while you are still in the dream state. Our lucid dream coaching services teach you techniques to enhance your dream awareness and control.</p>
+        <p>Lucid dreaming is the art of becoming aware that you are dreaming while you are still in the dream state. Our lucid dream coaching services teach you techniques to enhance your dream awaren[...]
         <button onclick="toggleInfo('lucid-dream-coaching')">More Information</button>
         <div id="lucid-dream-coaching" class="more-info">
             <p>Additional information about Lucid Dream Coaching...</p>
@@ -65,5 +76,19 @@
             }
         }
     </script>
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="js/jquery.waypoints.min.js"></script>
+    <!-- Stellar Parallax -->
+    <script src="js/jquery.stellar.min.js"></script>
+    <!-- Counters -->
+    <script src="js/jquery.countTo.js"></script>
+    <!-- Main JS (Do not remove) -->
+    <script src="js/main.js"></script>
 </body>
-  </html>
+</html>
