--- a/dAPP.html
+++ b/dAPP.html
@@ -7,14 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #ffffff;
-            color: #333;
+            background-color: #121212; /* Dark background */
+            color: #e0e0e0; /* Light text color */
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
         }
         header {
-            background: linear-gradient(90deg, #4CAF50, #388E3C);
+            background: linear-gradient(90deg, #212121, #424242);
             padding: 20px;
             text-align: center;
             color: white;
@@ -35,23 +35,24 @@
         }
         .app-container {
             padding: 20px;
-            border: 1px solid #ddd;
+            border: 1px solid #333;
             border-radius: 15px;
-            background-color: #f9f9f9;
+            background-color: #1e1e1e;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .wellness-professionals {
             margin: 20px 0;
             padding: 20px;
-            border: 1px solid #ddd;
+            border: 1px solid #333;
             border-radius: 8px;
-            background-color: #f9f9f9;
+            background-color: #1e1e1e;
         }
         .wellness-professionals h3 {
             margin-top: 0;
+            color: #e0e0e0;
         }
         button.vote-button, button.stake-button {
-            background-color: #4CAF50;
+            background-color: #424242;
             color: white;
             padding: 15px 20px;
             text-align: center;
@@ -65,7 +66,7 @@
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
         button.vote-button:hover, button.stake-button:hover {
-            background-color: #45a049;
+            background-color: #616161;
             transform: scale(1.1);
         }
         button.vote-button:active, button.stake-button:active {
@@ -77,7 +78,7 @@
             font-weight: 500;
         }
         footer {
-            background: #4CAF50;
+            background: #212121;
             padding: 10px;
             text-align: center;
             color: white;
@@ -208,4 +209,4 @@
         });
     </script>
 </body>
-  </html>
+</html>
